--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,7 @@
   <title>Rede-Hike</title>
 </head>
 
+
 <template name="Inicio">
 
   <h1>Conecte-se com o mundo.</h1>
@@ -24,10 +25,20 @@
 
 </template>
 
+<template name="Contato">
+
+  <h1>Contato</h1>
+  <h4>Aqui você pode encontrar todos os meios para entrar em contato comigo!</h4>
+  <p>Email: abcd@exemplo.com</p>
+  <p>Celular: 12345678</p>
+
+</template>
+
 <template name="Cabecalho">
 
   <a href="/">Inicio</a>
   <a href="/sobre">Sobre</a>
+  <a href="/contato">Contato</a>
   
 </template>
 
