--- a/client/Contact.html
+++ b/client/Contact.html
@@ -1,8 +1,21 @@
 <template name="Contato">
 
-  <h1>Contato</h1>
-  <h4>Aqui você pode encontrar todos os meios para entrar em contato comigo!</h4>
-  <p>Email: abcd@exemplo.com</p>
-  <p>Celular: 12345678</p>
+  <div class="container">
+
+  	<div class="row">
+
+  		<div class="col-md-12">
+  			<h1>Contato</h1>
+  		</div>
+
+  		<div class="col-md-12">
+			  <h4>Aqui você pode encontrar todos os meios para entrar em contato comigo!</h4>
+			  <p>Email: abcd@exemplo.com</p>
+			  <p>Celular: 12345678</p>
+  		</div>
+
+  	</div>
+
+  </div>
 
 </template>
