Posts, Insecure, Methods, Author and Likes Update.

--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -2,12 +2,15 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Autor</h3>
+      <h3 class="panel-title">{{authorusername}}</h3>
     </div>
     <div class="panel-body">
-      {{text}}
+      <div>{{text}}</div>
+      <button class="btn btn-default like-button">Curtir</button>
     </div>
   </div>
 
 
 </template>
+
+
